{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 30,
  "lineage": "335c8cfc-e624-c167-b22c-7230097ce5a3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/zones/europe-west1-b/instanceGroups/web-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-19T06:30:08.298-08:00",
            "enable_cdn": false,
            "fingerprint": "DDt16PMlcxs=",
            "generated_id": 2716318439846764447,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/healthChecks/web-http-healthcheck"
            ],
            "id": "projects/western-verve-481714-d4/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "western-verve-481714-d4",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_healthcheck",
            "google_compute_instance_group_manager.web_igm",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_service_account.default_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-19T06:29:22.013-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/western-verve-481714-d4/global/firewalls/main-vpc-allow-http",
            "log_config": [],
            "name": "main-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/networks/main-vpc",
            "priority": 1001,
            "project": "western-verve-481714-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/firewalls/main-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-19T06:29:22.162-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/western-verve-481714-d4/global/firewalls/main-vpc-allow-ssh",
            "log_config": [],
            "name": "main-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/networks/main-vpc",
            "priority": 1000,
            "project": "western-verve-481714-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/firewalls/main-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.206.155",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-19T06:29:10.680-08:00",
            "id": "projects/western-verve-481714-d4/global/addresses/http-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "http-lb-ip",
            "prefix_length": 0,
            "project": "western-verve-481714-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/addresses/http-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.193.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-12-19T06:29:22.161-08:00",
            "id": "projects/western-verve-481714-d4/global/addresses/private-service-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-service-range",
            "network": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/networks/main-vpc",
            "prefix_length": 16,
            "project": "western-verve-481714-d4",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/addresses/private-service-range"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/western-verve-481714-d4/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.117.206.155",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "port_range": "80-80",
            "project": "western-verve-481714-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/targetHttpProxies/web-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.http_healthcheck",
            "google_compute_instance_group_manager.web_igm",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.web_http_proxy",
            "google_compute_url_map.web_url_map",
            "google_service_account.default_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/western-verve-481714-d4/global/networks/main-vpc",
            "mtu": 0,
            "name": "main-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6896129184375562201",
            "project": "western-verve-481714-d4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/networks/main-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-19T06:29:23.240-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/western-verve-481714-d4/regions/europe-west1/routers/main-vpc-router",
            "name": "main-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/networks/main-vpc",
            "project": "western-verve-481714-d4",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/regions/europe-west1/routers/main-vpc-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "western-verve-481714-d4/europe-west1/main-vpc-router/main-vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "main-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "western-verve-481714-d4",
            "region": "europe-west1",
            "router": "main-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-19T06:29:22.292-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/western-verve-481714-d4/regions/europe-west1/subnetworks/main-vpc-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "main-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/networks/main-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "western-verve-481714-d4",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/regions/europe-west1/subnetworks/main-vpc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "web_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-19T06:31:22.453-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/western-verve-481714-d4/global/targetHttpProxies/web-http-proxy",
            "name": "web-http-proxy",
            "project": "western-verve-481714-d4",
            "proxy_bind": false,
            "proxy_id": 5055833928236588885,
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/targetHttpProxies/web-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/urlMaps/web-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend",
            "google_compute_health_check.http_healthcheck",
            "google_compute_instance_group_manager.web_igm",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.web_url_map",
            "google_service_account.default_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-19T06:31:11.064-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "1Nq1uTdmqVQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/western-verve-481714-d4/global/urlMaps/web-url-map",
            "map_id": 4209025883960827712,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "western-verve-481714-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/western-verve-481714-d4/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web_backend",
            "google_compute_health_check.http_healthcheck",
            "google_compute_instance_group_manager.web_igm",
            "google_compute_instance_template.web_template",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_service_account.default_sa"
          ]
        }
      ]
    }
  ]
}